# satellite-groundstation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: default.yaml
groundstation/: rotator_daemon.py  rotator_shutdown.py
groundstation/logging/: __init__.py  exporters.py  metrics.py  setup.py
groundstation/rotator/: controller.py  gpio.py  mqtt_client.py  polarization.py  protocol.py  state_machine.py  stepper.py
groundstation/rotator/service/: rotator.service
groundstation/station/collision/: constraints.py  geometry.py  planner.py  simulator.py  tracking_pipeline.py  visualizer.py
groundstation/station/mqtt/: client.py
groundstation/station/tracking/: predictor.py  satnogs_client.py  scheduler.py  tle_manager.py  transmitter_db.py
tests/: test_controller.py  test_gpio.py  test_mqtt_client.py  test_polarization.py  test_predictor.py  test_satnogs_client.py  test_scheduler.py  test_state_machine.py  test_station_mqtt.py  test_stepper.py  test_tle_manager.py  test_transmitter_db.py
tests/logging/: test_exporters.py  test_logging_setup.py  test_metrics.py
tests/rotator/: test_controller_logging.py
tests/station/: test_station_mqtt_client.py
tests/station/collision/: test_constraints.py  test_geometry.py  test_planner.py  test_simulator.py  test_tracking_pipeline.py  test_visualizer.py
tools/: analyze_hw.py  sync_hw_config.py  update_config_from_stl.py
